--- a/index.html
+++ b/index.html
@@ -4,11 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=\, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <div class="wrapper">
+        <header class="header">
+            <div class="grid">
+                <nav class="header__navbar">
+                    <ul class="header__navbar-list">
+                        <li class="header__navbar-item header__navbar-item--separate">
+                            Vào cửu hàng trên ứng dụng TickId
+                        </li>
+                        <li class="header__navbar-item">
+                            Kết nối
+                        </li>
+                    </ul>
     
+                    <ul class="header__navbar-list">
+                        <li class="header__navbar-item">
+                            <a href="" class="header__navbar-link">Thông báo</a>
+                        </li>
+                        <li class="header__navbar-item">
+                            <a href="" class="header__navbar-link">Trợ giúp</a>
+                        </li>
+                        <li class="header__navbar-item header__navbar-item--bold header__navbar-item--separate">
+                            Đăng ký
+                        </li>
+                        <li class="header__navbar-item header__navbar-item--bold">
+                            Đăng nhập
+                        </li>
+                    </ul>
+                </nav>
+            </div>  
+        </header>
+        <div class="container"></div>
+        <footer class="footer"></footer>
+    </div>
 </body>
 </html>
