done header notification

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <div class="grid">
           <nav class="header__navbar">
             <ul class="header__navbar-list">
-              <li class="header__navbar-item header__navbar-item--show header__navbar-item--separate">
+              <li
+                class="header__navbar-item header__navbar-item--show header__navbar-item--separate"
+              >
                 Vào cửu hàng trên ứng dụng TickId
 
                 <div class="header__qr">
@@ -66,11 +68,91 @@
             </ul>
 
             <ul class="header__navbar-list">
-              <li class="header__navbar-item">
+              <li class="header__navbar-item header__navbar-item--notify">
                 <a href="" class="header__navbar-link">
                   <i class="header__navbar-icon fa-solid fa-bell"></i>
                   Thông báo</a
                 >
+
+                <div class="header__notify">
+                  <div class="header__notify-header">
+                    <h3>Thông báo mới nhận</h3>
+                  </div>
+                  <ul class="header__notify-list">
+                    <li class="header__notify-item header__notify-item--view">
+                      <a href="#" class="header__notify-link">
+                        <img
+                          src="./assets/img/product_1.png"
+                          alt="product_1"
+                          class="header__notify-img"
+                        />
+                        <div class="header__notify-info">
+                          <span class="header__nofify-name"
+                            >Giá Đỡ Điện Thoại livestream xem video Ổn Định Xoay
+                            360 Độ dùng để Quay Phim Ghi Hình Đa Dụng</span
+                          >
+                          <span class="header__nofify-desc"
+                            >Mô tả mỹ phẩm Ohui chính hãng</span
+                          >
+                        </div>
+                      </a>
+                    </li>
+                    <li class="header__notify-item">
+                      <a href="#" class="header__notify-link">
+                        <img
+                          src="./assets/img/product_1.png"
+                          alt="product_1"
+                          class="header__notify-img"
+                        />
+                        <div class="header__notify-info">
+                          <span class="header__nofify-name"
+                            >Mỹ phẩm Ohui chính hãng</span
+                          >
+                          <span class="header__nofify-desc"
+                            >Mô tả mỹ phẩm Ohui chính hãng</span
+                          >
+                        </div>
+                      </a>
+                    </li>
+                    <li class="header__notify-item">
+                      <a href="#" class="header__notify-link">
+                        <img
+                          src="./assets/img/product_1.png"
+                          alt="product_1"
+                          class="header__notify-img"
+                        />
+                        <div class="header__notify-info">
+                          <span class="header__nofify-name"
+                            >Mỹ phẩm Ohui chính hãng</span
+                          >
+                          <span class="header__nofify-desc"
+                            >Mô tả mỹ phẩm Ohui chính hãng</span
+                          >
+                        </div>
+                      </a>
+                    </li>
+                    <li class="header__notify-item">
+                      <a href="#" class="header__notify-link">
+                        <img
+                          src="./assets/img/product_1.png"
+                          alt="product_1"
+                          class="header__notify-img"
+                        />
+                        <div class="header__notify-info">
+                          <span class="header__nofify-name"
+                            >Mỹ phẩm Ohui chính hãng</span
+                          >
+                          <span class="header__nofify-desc"
+                            >Mô tả mỹ phẩm Ohui chính hãng</span
+                          >
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                  <div class="header__notify-view-all">
+                    <a href="#" class="header__notify_btn"> Xem tất cả </a>
+                  </div>
+                </div>
               </li>
               <li class="header__navbar-item">
                 <a href="" class="header__navbar-link">
